[project]
name = "trading-algo"
version = "0.1.0"
description = "Algorithmic trading strategies and backtesting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "lxml>=6.0.3",
]
